--- a/Kubernetes/云原生12要素.md
+++ b/Kubernetes/云原生12要素.md
@@ -1,3 +1,7 @@
+---
+typora-root-url: ../Picture
+---
+
 # 云原生十二要素(Cloud-Native 12-Factors)
 
 ## 1.什么是云原生(What is Cloud-Native)？
@@ -25,6 +29,6 @@
 
 ​		
 
-以下是云原生的发展史:![2021-01-11 19-57-48 的屏幕截图](/home/eicas/Pictures/2021-01-11 19-57-48 的屏幕截图.png)
+以下是云原生的发展史: ![云原生发展历程](/%E4%BA%91%E5%8E%9F%E7%94%9F%E5%8F%91%E5%B1%95%E5%8E%86%E7%A8%8B.png)
 
 ​		
