--- a/Kubernetes/云原生12要素.md
+++ b/Kubernetes/云原生12要素.md
@@ -1,4 +1,4 @@
-# 云原生十二要素(Cloud-Native 12-Factors)
+# 云原生
 
 ## 1.什么是云原生(What is Cloud-Native)？
 
@@ -17,7 +17,7 @@
 	These techniques enable loosely coupled systems that are resilient, manageable, and observable. Combined with robust automation, they allow engineers to make high-impact changes frequently and predictably with minimal toil.
 	The Cloud Native Computing Foundation seeks to drive adoption of this paradigm by fostering and sustaining an ecosystem of open source, vendor-neutral projects. We democratize state-of-the-art patterns to make these innovations accessible for everyone.
 	
-	翻译后为：
+	翻译为：
 	云原生技术使组织能够在现代动态环境（例如公共云，私有云和混合云）中构建和运行可伸缩应用程序。容器，服务网格，微服务，不变的基础结构和声明性API就是这种方法的例证。
 	这些技术使松散耦合的系统具有弹性，可管理性和可观察性。结合强大的自动化功能，它们使工程师可以频繁且可预测地以最小的工作量进行高影响力的更改。
 	云原生计算基金会试图通过促进和维持开源，与供应商无关的项目生态系统来推动这种范例的采用。我们将最先进的模式民主化，以使每个人都可以使用这些创新。
@@ -28,3 +28,86 @@
 以下是云原生的发展史:![2021-01-11 19-57-48 的屏幕截图](/home/eicas/Pictures/2021-01-11 19-57-48 的屏幕截图.png)
 
 ​		
+
+## 2.各个阶段云原生的概念
+
+- 2010年Paul Fremantle博文：
+  - 云原生特指适合云计算模式的应用程序编写方式
+- 2015年CNCF定义云原生：
+  - 应用容器化
+  - 面向微服务架构
+  - 应用支持容器的编排调度
+
+- 2015年Pivotal公司的Matt Stine《迁移到云原生应用架构》定义云原生：
+  - 符合12因素应用
+  - 面向微服务架构
+  - 自服务敏捷架构
+  - 基于API的协作
+  - 抗脆弱性
+
+- 2018年CNCF重新定义云原生：
+  - 云原生技术有利于各组织在公有云、私有云和混合云等新型动态环境中，构建和运行可弹性扩展的应用。云原生的代表技术包括容器、服务网格、微服务、不可变基础设施和声明式API。
+  - 这些技术能够构建容错性好、易于管理和便于观察的松耦合系统。结合可靠的自动化手段，云原生技术使工程师能够轻松地对系统作出频繁和可预测的重大变更。
+  - 云原生计算基金会（CNCF）致力于培育和维护一个厂商中立的开源生态系统，来推广云原生技术。我们通过将最前沿的模式民主化，让这些创新为大众所用。
+
+## 3.云原生十二要素(Cloud-Native 12-Factors)
+
+软件通常会作为一种服务来交付，即软件即服务(SaaS)。`12-Factor`原则为构建SaaS应用提供了以下的`方法论`：
+
+- 使用标准化流程自动配置，减少开发者的学习成本。
+- 和操作系统解耦，使其可以在各个系统间提供最大的移植性。
+- 适合部署在现代的云计算平台上，从而在服务器和系统管理方面节省资源。
+- 将开发环境与生产环境的差异降至最低，并使用持续交付实施敏捷开发。
+- 可以在工具、架构和开发流程不发生明显变化的前提下实现拓展
+
+该理论适应于任何语言和后端服务(数据库、消息队列、缓存等)开发的应用程序。
+
+1. 基准代码
+
+   一份基准代码(Codebase)，可以多份部署(deploy)。
+
+2. 依赖
+
+   显式声明依赖关系(Dependency)
+
+3. 配置
+
+   在环境中存储配置
+
+4. 后端服务
+
+   把后端服务(backing services)当做附加资源
+
+5. 构建，发布，运行
+
+   严格分离构建和运行
+
+6. 进程
+
+   以一个或多个无状态进程运行应用
+
+7. 端口绑定
+
+   通过端口绑定(port binding)来提供服务
+
+8. 并发
+
+   通过进程模型进行扩展
+
+9. 易处理
+
+   快速启动和优雅中止可最大化健壮性
+
+10. 开发环境与线上环境等价
+
+    尽可能的保持开发，预发布，线上环境相同
+
+11. 日志
+
+    把日志当做事件流
+
+12. 管理进程
+
+    后台管理任务当做一次性进程运行
+
+## 4.
